More style fixes.