@@ -8,7 +8,7 @@ public class MemoryEfficientIntSet extends AbstractIntSet {
   private final List<Integer> elements;
 
   public MemoryEfficientIntSet() {
-    elements = new ArrayList<Integer>();
+    elements = new ArrayList<>();
   }
 
   @Override
@@ -32,9 +32,9 @@ public class MemoryEfficientIntSet extends AbstractIntSet {
   @Override
   public boolean remove(int item) {
     // Note that
-    //    elements.remove(x);
+    //    elements.remove(item);
     // would mean something different!
-    return elements.remove(new Integer(item));
+    return elements.remove(Integer.valueOf(item));
   }
 
   @Override
